LPD-103394 Settle extending and reactivating under the same lock as creating
The shared capacity check took the account lock, answered, and released it
before anything was written, and it answered each key against stored state. So
a body extending five keys against one remaining license passed five times and
wrote five keys, no race required, and two callers racing passed for the same
reason. Naming a zero entitlement skipped the check outright and wrote a key
that the consumption never counts again, which is the leak the create path had
just been fixed to refuse. The check also asked only that the entitlement be
active on the account, so a key could be charged against a support entitlement
rather than one that grants license generation.

Extending and reactivating now run the way creating does: one lock held across
the whole body, the entitlements and the consumption read once, and the ledger
carried from each key to the next. A zero entitlement is accepted only for a
key that already has none, which keeps keys written before entitlements were
tracked working without letting a tracked key be moved off the ledger.